# praktikum_project_lib_tyme

./: PROJECT_NOTES.md  README.md  debug_profile.py  pyproject.toml  test_debug.py  test_lib.py  test_lib_expanded.py
data/: dummy.csv
example/: tyme_export_1768930619.txt
tyme/: __init__.py  api.py  cli.py  csv_loader.py  ollama_client.py  parsing.py  profile.py  prompts.py  session.py
tyme.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tyme_fe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
